# xa-honeycomb

./: .gitignore  Cargo.toml  PROFILES.md  README.md  app.go  go.mod  go.sum  honeycomb.go  main.go  makefile  skunkcrafts_updater.cfg  wails.json
.github/workflows/: release.yaml
frontend/: index.html  package-lock.json  package.json  package.json.md5
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: datarefValue.tsx  lightConfiguration.tsx  lights.tsx  list.tsx  metadata.tsx  profiles.tsx  tab.tsx  xplane.tsx
pkg/: logger.go  shared.go
pkg/honeycomb/: bravo.go  leds.go  logger.go
pkg/xplane/: cmd.go  datarefs.go  datarefs_test.go  flight_loop.go  logger.go  menu.go  plugin.go  profile.go  utils.go  xplane.go  xplane_test.go
plugin/: plugin.go
profiles/: A319.yaml  A321.yaml  A339.yaml  B736_level_up.yaml  B737_level_up.yaml  B738_level_up.yaml  B738_zibo.yaml  B739_level_up.yaml  Boeing 737-800X.yaml  C172 NG ANALOG.yaml  C172.yaml  C172_airfoilabs.yaml  C750 LR.yaml  DH8D.yaml  MD11.yaml  SF50.yaml  default.yaml  sample.csv
release/: honeycomb  lin.xpl  mac.xpl  skunkcrafts_updater.cfg  skunkcrafts_updater_whitelist.txt
release/profiles/: A319.yaml  A339.yaml  A346.csv  B736_level_up.yaml  B737_level_up.yaml  B738_level_up.yaml  B739_level_up.yaml  Boeing 737-800X.yaml  C172 Steam.yaml  C172_airfoilabs.yaml  DH8D.csv  DH8D.yaml  E55P.csv  MD11.csv  MD11.yaml  SR22.yaml
src/: flight_loop.rs  lib.rs  logger.rs
src/bravo/: led.rs
src/misc/: logger.rs  mod.rs  path.rs
src/profile/: types.rs
tmp/: go.mod  go.sum
(+5 files in other folders)
