[package]
name = "xa-honeycomb"
version = "0.1.0"
edition = "2021"

[dependencies]
xplm = { git = "https://github.com/samcrow/rust-xplm", branch = "master" }
xplm-sys = "0.5.1"
lazy_static = "1.4"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"   # For YAML serialization and deserialization
serde_json = "1.0"   # For JSON handling
hidapi = "1.3.0"


[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib","rlib"]
bench = false
path = "src/lib.rs"
